// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup Component should match snapshot 1`] = `
<View
  testID="wrapper"
>
  <View
    style={
      {
        "backgroundColor": "yellow",
        "borderColor": "#e3e3e3",
        "borderRadius": 3,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 40,
        "marginHorizontal": 10,
        "marginVertical": 5,
        "overflow": "hidden",
      }
    }
    testID="RNE__ButtonGroupContainer"
  >
    <View
      style={
        {
          "borderRightColor": "#bdc6cf",
          "borderRightWidth": 1,
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "flex": 1,
          }
        }
        testID="RNE__ButtonGroupItem"
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "blue",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "pink",
                "fontSize": 16.714285714285715,
                "fontWeight": "500",
              }
            }
            testID="buttonGroupItemText"
          >
            Button 1
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "borderRightColor": "#bdc6cf",
          "borderRightWidth": 1,
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "flex": 1,
          }
        }
        testID="RNE__ButtonGroupItem"
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "blue",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "pink",
                "fontSize": 16.714285714285715,
                "fontWeight": "500",
              }
            }
            testID="buttonGroupItemText"
          >
            Button 2
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "flex": 1,
          }
        }
        testID="RNE__ButtonGroupItem"
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "blue",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "pink",
                "fontSize": 16.714285714285715,
                "fontWeight": "500",
              }
            }
            testID="buttonGroupItemText"
          >
            Button 3
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ButtonGroup Component should match snapshot with components 1`] = `
<View
  testID="wrapper"
>
  <View
    style={
      {
        "backgroundColor": "yellow",
        "borderColor": "#e3e3e3",
        "borderRadius": 3,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 40,
        "marginHorizontal": 10,
        "marginVertical": 5,
        "overflow": "hidden",
      }
    }
    testID="RNE__ButtonGroupContainer"
  >
    <View
      style={
        {
          "borderRightColor": "#bdc6cf",
          "borderRightWidth": 1,
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "flex": 1,
          }
        }
        testID="RNE__ButtonGroupItem"
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "blue",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "pink",
                "fontSize": 16.714285714285715,
                "fontWeight": "500",
              }
            }
            testID="buttonGroupItemText"
          >
            <Text>
              Button 1
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "borderRightColor": "#bdc6cf",
          "borderRightWidth": 1,
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "flex": 1,
          }
        }
        testID="RNE__ButtonGroupItem"
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "blue",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "pink",
                "fontSize": 16.714285714285715,
                "fontWeight": "500",
              }
            }
            testID="buttonGroupItemText"
          >
            <Text>
              Button 2
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "flex": 1,
          }
        }
        testID="RNE__ButtonGroupItem"
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "blue",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "pink",
                "fontSize": 16.714285714285715,
                "fontWeight": "500",
              }
            }
            testID="buttonGroupItemText"
          >
            <Text>
              Button 3
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ButtonGroup Component should match snapshot with objects 1`] = `
<View
  testID="wrapper"
>
  <View
    style={
      {
        "backgroundColor": "yellow",
        "borderColor": "#e3e3e3",
        "borderRadius": 3,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 40,
        "marginHorizontal": 10,
        "marginVertical": 5,
        "overflow": "hidden",
      }
    }
    testID="RNE__ButtonGroupContainer"
  >
    <View
      style={
        {
          "borderRightColor": "#bdc6cf",
          "borderRightWidth": 1,
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "flex": 1,
          }
        }
        testID="RNE__ButtonGroupItem"
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "blue",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <View>
            <Text>
              Button 1
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "borderRightColor": "#bdc6cf",
          "borderRightWidth": 1,
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "flex": 1,
          }
        }
        testID="RNE__ButtonGroupItem"
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "blue",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <View>
            <Text>
              Button 2
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "flex": 1,
          }
        }
        testID="RNE__ButtonGroupItem"
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "blue",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <View>
            <Text>
              Button 3
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
